mutants.out/log/src__proto__client__mod.rs_line_293_col_9.log

*** src/proto/client/mod.rs:293:9: replace Client<S>::heartbeat -> Result<HeartbeatStatus, Error> with Ok(Default::default())

*** mutation diff:
--- src/proto/client/mod.rs
+++ replace Client<S>::heartbeat -> Result<HeartbeatStatus, Error> with Ok(Default::default())
@@ -285,38 +285,17 @@
     {
         self.issue(&single::Fetch::from(queues))
             .await?
             .read_json()
             .await
     }
 
     pub(crate) async fn heartbeat(&mut self) -> Result<HeartbeatStatus, Error> {
-        single::write_command(
-            &mut self.stream,
-            &single::Heartbeat::new(self.opts.wid.as_ref().unwrap().clone()),
-        )
-        .await?;
-
-        match single::read_json::<_, serde_json::Value>(&mut self.stream).await? {
-            None => Ok(HeartbeatStatus::Ok),
-            Some(s) => match s
-                .as_object()
-                .and_then(|m| m.get("state"))
-                .and_then(|s| s.as_str())
-            {
-                Some("terminate") => Ok(HeartbeatStatus::Terminate),
-                Some("quiet") => Ok(HeartbeatStatus::Quiet),
-                _ => Err(error::Protocol::BadType {
-                    expected: "heartbeat response",
-                    received: format!("{}", s),
-                }
-                .into()),
-            },
-        }
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl<S> Client<S>
 where
     S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send,
 {
     /// Asynchronously enqueue the given job on the Faktory server.


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0277]: the trait bound `HeartbeatStatus: Default` is not satisfied
   --> src/proto/client/mod.rs:293:12
    |
293 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `HeartbeatStatus`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
